# FitKeeper---AI-Fitness-Partner

./: .env  .gitignore  calendar_setup.sql  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js  test-supabase.ts  tsconfig.json  vite.config.ts
.trae/documents/: fitkeeper_prd.md  fitkeeper_technical_architecture.md
.vercel/: project.json
ZED_CV/: CV_latest_CN.tex
api/: app.ts  index.py  server.ts
api/routes/: chat.ts
api_python/: main.py  rag_system.py
api_python/routes/: auth.py  chat.py
data/: exercise_icons.json  exercise_knowledge_base.json  exercises_curated.json  fitness_knowledge_base.json  scientific_training_knowledge.json  training_knowledge_extended.json
scripts/: build_index.py
src/: App.tsx  index.css
src/components/: Layout.tsx
src/lib/: supabase.ts
src/pages/: Calendar.tsx  Chat.tsx  Dashboard.tsx  Home.tsx  Nutrition.tsx  Profile.tsx  Workout.tsx
src/pages/Auth/: Login.tsx  Register.tsx
src/store/: authStore.ts
supabase/migrations/: 20240325000000_init_schema.sql  20240326000000_add_chat_sessions.sql  20240327000000_add_height_weight_to_users.sql  20240328000000_enhance_workout_plans.sql
